<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="blank"></string>
    <string name="app_name">Gokigen Diary</string>
    <string name="app_credit">An emotion recorder\n web site: "http://bit.ly/dpobnk"</string>
    <string name="app_finished">　is finished.</string>
    <string name="app_started">　is started.</string>
    <string name="preference_name">Settings</string>
    <string name="about_gokigen">About</string>
    <string name="diaryinput_name">Input</string>
    <string name="locationMap_name">Map View</string>
    <string name="diarydataview_name">View</string>
    <string name="gokigengraph_name">Graph</string>
    <string name="dataWrite_name">Save</string>
    <string name="networkGpsTitle">Get location via Network</string>
    <string name="networkGpsSummary"></string>
    <string name="parameterTitle">preferences</string>
    <string name="LocationParameterTitle">Location Operations</string>
    <string name="ShareParameterTitle">Share Operations</string>
    <string name="listPreviewTitle">Simple list for main</string>
    <string name="listPreviewSummary">Do not show preview data contents in main screen.</string>
    <string name="timeoutValue">location check duration (min.)</string>
    <string name="timeoutValueSummary"></string>
    <string name="amountUnit">Unit of numerical value</string>
    <string name="amountUnitSummary"></string>
    <string name="myLocale">Locale</string>
    <string name="myLocaleSummary">The locale for Geocoding</string>
    <string name="offlineTitle">OFFLINE mode</string>
    <string name="offlineSummary"></string>
    <string name="dataWritten">data is written.</string>
    <string name="failedToWrite">data write failure...</string>
    <string name="cancelWrite">aborted</string>
    <string name="totalNumberTitle">Total:</string>
    <string name="delete">delete</string>
    <string name="editText">edit text</string>
    <string name="editTextTitle">Modify Comment</string>
    <string name="showPlace">location</string>
    <string name="today">Today</string>
    <string name="labelRating1">Rate it!</string>
    <string name="labelDescription">Comment</string>
    <string name="savedTime">Saved Time</string>
    <string name="savedLocation">Location</string>
    <string name="numberTitle">- - -</string>
    <string name="dummyData">* * *</string>
    <string name="secretModeTitle">Secret mode</string>
    <string name="secretModeSummary">Checks password when launching</string>
    <string name="passPhraseTitle">Password</string>
    <string name="passPhraseSummary">Launching password</string>
    <string name="passphraseIsWrong">Wrong password...</string>
    <string name="hintInputPassphrase">Enter password</string>
    <string name="warn_offline">cannot use OFFLINE mode</string>
    <string name="cannotOpenDirectory">no data.</string>
    <string name="cannotZoomIn">cannot zoom-in any more</string>
    <string name="cannotZoomOut">cannot zoom-out any more</string>
    <string name="moveToCurrentLocation">move to current location</string>
    <string name="moveToSpecifiedLocation">move to the location</string>
    <string name="confirmDelete">Delete it, are you OK?</string>
    <string name="confirmYes">OK</string>
    <string name="confirmNo">Cancel</string>
    <string name="hintNumberInput">number value</string>
    <string name="hintMessageInput">message</string>
    <string name="dataLoading">Loading...</string>
    <string name="shareContent">Share</string>
    <string name="speechRecognization">Speech Recognition</string>
    <string name="useAA_title">Insert smiley</string>
    <string name="useAA_summary">at share command</string>
    <string name="useLocation_title">Insert Location Info.</string>
    <string name="useLocation_summary">at share command</string>
    <string name="insertPicture">insert picture</string>
    <string name="search">search</string>
    <string name="searching">searching...</string>
    <string name="diarySearch_name">Search</string>
    <string name="hintSearchKeyword">Search keyword</string>
    <string name="setSearchCondition">Advanced search</string>
    <string name="nofMatchedItems">Matched Items : </string>
    <string name="noData">(No data)</string>
    <string name="revisionHistory">Revision History</string>
    <string name="readBarcode">Scan QR/Barcode</string>
    <string name="notFoundBcr">not found Barcode Scanner</string>
    <string name="dateSelection">Date Selection</string>
    <string name="sundayLabel">Sun</string>
    <string name="mondayLabel">Mo</string>
    <string name="tuesdayLabel">Tue</string>
    <string name="wednesdayLabel">We</string>
    <string name="thursdayLabel">Thu</string>
    <string name="fridayLabel">Fri</string>
    <string name="saturdayLabel">Sat</string>
    <string name="locationDetail">location Info.</string>
    <string name="specifyDateTime">Specify Date and Time</string>
    <string name="setCurrentDateTime">Set current date and time</string>
    <string name="clearDateTimeSet">clear</string>
    <string name="enteredDateTime">Specified Date : </string>
    <string name="showDaily">Daily</string>
    <string name="showWeekly">Weekly</string>
    <string name="showMonthly">Monthly</string>
</resources>
